ci/local-kubernetes/preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-preview
  namespace: devops-preview
spec:
  ingressClassName: lab-traefik
  rules:
    - host: preview.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitor-preview
                port:
                  number: 5001
